force-app/main/default/objects/Monthly_Sales_Report__c/Monthly_Sales_Report__c.object-meta.xml
<CustomObject>
    <label>Monthly Sales Report</label>
    <nameField>
        <label>Monthly Sales Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Sales Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>