force-app/main/default/objects/Monthly_Sales_Report__c/fields/beforeInsert__c.field-meta.xml
<CustomField>
    <fullName>beforeInsert__c</fullName>
    <formula>If (Id=null,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>beforeInsert</label>
    <type>Checkbox</type>
</CustomField>