force-app/main/default/objects/Monthly_Sales_Report__c/fields/Chosen_Year__c.field-meta.xml
<CustomField>
    <fullName>Chosen_Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Years</valueSetName>
    </valueSet>
</CustomField>