force-app/main/default/objects/Monthly_Sales_Report__c/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <label>Focus Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>