force-app/main/default/objects/Monthly_Sales_Report__c/fields/Key_Activities__c.field-meta.xml
<CustomField>
    <fullName>Key_Activities__c</fullName>
    <label>Key Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>