force-app/main/default/objects/Monthly_Sales_Report__c/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <label>Monthly</label>
    <type>Url</type>
</CustomField>