force-app/main/default/objects/Monthly_Sales_Report__c/fields/New_Competition__c.field-meta.xml
<CustomField>
    <fullName>New_Competition__c</fullName>
    <label>New Competition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>