force-app/main/default/objects/Monthly_Sales_Report__c/fields/New_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunities__c</fullName>
    <label>New Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>