force-app/main/default/objects/Monthly_Sales_Report__c/fields/People_Management__c.field-meta.xml
<CustomField>
    <fullName>People_Management__c</fullName>
    <label>People Management</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>