force-app/main/default/objects/Monthly_Sales_Report__c/fields/Planned_Visits_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Planned_Visits_Next_Month__c</fullName>
    <label>Planned Visits Next Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>