force-app/main/default/objects/Monthly_Sales_Report__c/fields/Red_Flags__c.field-meta.xml
<CustomField>
    <fullName>Red_Flags__c</fullName>
    <label>Red Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>