force-app/main/default/objects/Monthly_Sales_Report__c/fields/Safety_Issues__c.field-meta.xml
<CustomField>
    <fullName>Safety_Issues__c</fullName>
    <label>Safety Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>