force-app/main/default/objects/Monthly_Sales_Report__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Monthly_Sales_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>