force-app/main/default/objects/Monthly_Sales_Report__c/fields/Strategic_Sales_Targets__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Sales_Targets__c</fullName>
    <label>Strategic Sales Targets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>