force-app/main/default/objects/Monthly_Sales_Report__c/fields/Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Support_Needed__c</fullName>
    <label>Support Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>