force-app/main/default/objects/Monthly_Sales_Report__c/listViews/Running_User_List_View.listView-meta.xml
<ListView>
    <fullName>Running_User_List_View</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Done__c</columns>
    <columns>Key_Activities__c</columns>
    <filterScope>Mine</filterScope>
    <label>Running Users Reports</label>
</ListView>